# rust-vision

./: .gitignore  create_project.sh
actix-test/: Cargo.toml  Dockerfile  build.sh  docker_run.sh
actix-test/src/: main.rs
actix-test/static/: index.html  index.js
actix-test/static/wasm-app/: Cargo.toml
actix-test/static/wasm-app/src/: lib.rs
vision/: Cargo.toml  Dockerfile  docker_run.sh  test.py
vision/src/: main.rs
vision/tests/: matrix_operator_test.rs  traits.rs
web_assembly/wasm-tutorial/: Cargo.toml  build.sh  docker_run.sh  index.html  index.js  package-lock.json
web_assembly/wasm-tutorial/cargo_target/: .rustc_info.json
web_assembly/wasm-tutorial/cargo_target/debug/: libwasm_tutorial.d  libwasm_tutorial.rlib  wasm-tutorial.d
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-codec-f8f6823d60ed5b23/: lib-actix_codec  lib-actix_codec.json
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-connect-ff4d0781b8025387/: lib-actix_connect  lib-actix_connect.json
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-files-53cf12f6c3a7d8b0/: lib-actix_files  lib-actix_files.json
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-http-ebb63e766d6b4ddc/: lib-actix_http  lib-actix_http.json
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-macros-f682664edf9a4871/: lib-actix-macros  lib-actix-macros.json
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-router-b272b12173e3f3a1/: lib-actix_router  lib-actix_router.json
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-rt-3aaa31f7a36c642a/: lib-actix_rt  lib-actix_rt.json
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-server-1697e0a0aac4b85f/: lib-actix_server  lib-actix_server.json
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-service-e2baf3ccac3b343a/: lib-actix_service  lib-actix_service.json
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-testing-5b5b6bf7e431bf4c/: lib-actix_testing  lib-actix_testing.json
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-threadpool-de3baaddb0b48ec1/: lib-actix_threadpool  lib-actix_threadpool.json
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-tls-8e3acd1ee8ac67da/: lib-actix_tls  lib-actix_tls.json
web_assembly/wasm-tutorial/cargo_target/debug/.fingerprint/actix-utils-4d22ad38144cb768/: lib-actix_utils  lib-actix_utils.json
web_assembly/wasm-tutorial/src/: lib.rs  main.rs
web_assembly/wasm-tutorial/static/: index.js
(+301 files in other folders)
