[package]
name = "actix-test"
version = "0.1.0"
authors = []
edition = "2018"


[dependencies]
actix-web = { version =  "3" }
actix-files = { version = "0.5.0" }
actix = "0.10"
#actix-codec = "0.3"
actix-web-actors = "3"
#awc = "2"
#env_logger = "0.8"
futures = "0.3.1"
#bytes = "0.5.3"

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true
