[package]
name = "vision"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#opencv = {version = "0.51.0", features = ["contrib"]}
opencv = {version = "0.51", default-features = false, features = ["opencv-34", "buildtime-bindgen"]}
datetime = "0.5.2"

